<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="favorites">Favorites</string>
    <string name="about_title">A simple Atom/RSS Feed Reader</string>
    <string name="about_copying">Weader is free software: you can redistribute and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.</string>
    <string name="about_version">Version %1$s</string>
    <string name="user_agent">Weader/%1$s</string>
    <string name="about_website">https://github.com/wingel/weader</string>
    <string name="action_add_feed">Add Feed</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Weader</string>
    <string name="delete">Delete</string>
    <string name="feed_delete_title">Are you sure you want to delete the following feed?</string>
    <string name="logotype">Logotype</string>
    <string name="mark_all_read">Mark all as read</string>
    <string name="mark_all_unread">Mark all as unread</string>
    <string name="mark_fav">Make favorite</string>
    <string name="mark_read">Mark article as read</string>
    <string name="mark_unfav">Remove favorite</string>
    <string name="mark_unread">Mark article as unread</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_feed_list">Weader</string>
    <string name="title_activity_item_list">Weader</string>
    <string name="title_activity_item_list_feedname">Weader - %1$s</string>
    <string name="title_activity_pager">Weader</string>
    <string name="title_activity_pager_feedname">Weader - %1$s</string>
    <string name="toast_marked_all_read">All articles marked as read</string>
    <string name="toast_marked_all_unread">All articles marked as unread</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="add_feed_message">Enter the URL for the feed you want to add</string>
    <string name="add_feed_title">Add Feed</string>
    <string name="add_feed_uri">http://blog.weinigel.se/feeds/posts/default</string>
    <string name="add_feed_exists">Feed already exists</string>
    <string name="add_feed_failed">Failed to fetch feed</string>
    <string name="add_feed_ok">Feed added</string>
    <string name="add_feed_unknown">Unknown response when adding feed</string>
    <string name="pref_path_item_filter_summary">Weader tries to recognize links that might be feeds.  This can cause problems with some pages so this feature can be turned off.</string>
    <string name="pref_path_item_filter_title">Handle feed links</string>
    <string name="title_activity_settings">Weader - Settings</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="legacy_upgrade_started">Database upgrade started</string>
    <string name="legacy_upgrade_success">Database upgrade finished</string>
    <string name="legacy_upgrade_failure">Database upgrade failed</string>

</resources>