<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_mark_read"
        android:icon="@drawable/ic_menu_mark_set"
        android:orderInCategory="50"
        android:title="@string/mark_read"/>
    <item
        android:id="@+id/action_mark_unread"
        android:icon="@drawable/ic_menu_mark_clear"
        android:orderInCategory="50"
        android:title="@string/mark_unread"/>
    <item
        android:id="@+id/action_mark_fav"
        android:icon="@drawable/ic_menu_star"
        android:orderInCategory="100"
        android:title="@string/mark_fav"/>
    <item
        android:id="@+id/action_mark_unfav"
        android:icon="@drawable/ic_menu_star"
        android:orderInCategory="100"
        android:title="@string/mark_unfav"/>
    
</menu>