<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:orderInCategory="50"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/action_add_feed"
        android:icon="@drawable/ic_menu_add"
        android:orderInCategory="60"
        android:title="@string/action_add_feed"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_menu_info_details"
        android:orderInCategory="110"
        android:title="@string/action_about"/>

</menu>